# Football-Bet-Analyzer

./: .env.example  .gitignore  Dockerfile  README.md  analyzer.py  app.py  cleanup_duplicates.py  config.py  data_fetcher.py  data_processor.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  rules.md  seed_data.py  system_source_code.txt  ui_helpers.py  vercel.json
.github/workflows/: main.yml
.streamlit/: config.toml
adapters/: base_adapter.py  football_adapter.py  name_mapping.py
adapters/parsers/: csv_parsers.py
clients/: base_client.py  email_client.py  football_data_client.py  odds_api_client.py  telegram_client.py
core/: __init__.py  config.py  constants.py  database.py  logger.py  pricing.py  redis_client.py
frontend/: next.config.ts  package-lock.json
middleware/: rate_limiter.py  security.py  telemetry.py
middlewares/: __init__.py  rate_limiter.py
repositories/: __init__.py  analytics_repository.py  base.py  match_repository.py  user_repository.py
routers/: __init__.py  admin.py  analysis.py  auth.py  billing.py  matches.py
schemas/: __init__.py  analytics.py  auth.py  billing.py  match.py  odds.py
scripts/: fetch_upcoming.py
services/: __init__.py  analysis_service.py  auth_service.py  billing_service.py  match_service.py
tasks/: __init__.py  fetch_data.py  ingestion.py  scheduler.py
tests/: conftest.py  test_analysis_service.py  test_auth_service.py  test_billing_service.py  test_manuel_iyizico.py  test_rate_limiter.py
utils/: __init__.py  cache.py  dependencies.py  email.py  exceptions.py  lock.py  security.py
(+34 files in other folders)
